<resources>
    <string name="app_name">Dr Auto</string>
    <string name="titleName">DR. AUTO</string>
    <string name="content">Looking for Repair or Service!</string>
    <string name="loginB">Login</string>
    <string name="RehisterB">Next</string>
    <string name="Forgot"><u>Forgot Password ?</u></string>
    <string name="Doesnt">Don\'t have account ? </string>
    <string name="create">Create an Account </string>
    <string name="swipe_left_for_register">New here ? Register</string>
    <string name="login">Welcome back!</string>
    <string name="password">Password</string>
    <string name="e_mail">Email</string>
    <string name="swipe_right_for_login">Already a member ?</string>
    <string name="register">Get on Board</string>
    <string name="signup">Sign Up</string>
    <string name="reset"><u>Forgot your password?</u></string>
    <string name="re_type_password">Re-type Password</string>
    <string name="your_name">Name</string>
    <string name="title_activity_start">start</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="search">What are you Looking for ?</string>
    <string name="previous">Previous</string>
    <string name="profileNmae">Prashant Parmar</string>
    <string name="location">Getting location</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_forgot_password">ForgotPassword</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="tyers_service">Tyers Service</string>
    <string name="service">Service</string>
    <string name="tyers_wheels"><![CDATA[Tyers & wheels]]></string>
    <string name="ac_service">Ac Service</string>
    <string name="cleaning">Cleaning</string>
    <string name="batteries">Batteries</string>
    <string name="insurance">Insurance</string>
    <string name="custom">BreakDown</string>
    <string name="username">Username</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="we_just_need_your_registered_email_address_to">We just need your registered Email Address to</string>
    <string name="send_you_password_reset_instructions">send you password reset instructions</string>
    <string name="profileName">Prashant Parmar</string>
    <string name="what_are_you_looking_for">What are you Looking for ?</string>
    <string name="dent_repair">Dent Repair</string>
    <string name="my_proflie">My Proflie</string>
    <string name="saw_automobiles">SAW Automobiles</string>
    <string name="_3_299">₹ 3,299</string>
    <string name="car_service">Car Service</string>
    <string name="every_5000_km_3_months">Every 5000 km/3 Months</string>
    <string name="takes_4_hrs">Takes 4 Hrs</string>
    <string name="service_provider">Service Provider</string>
    <string name="engine_oil_replacement">Engine Oil Replacement</string>
    <string name="title_activity_location_acrivity">Map</string>

    <string name="continuess">Show Route</string>
    <string name="your_address">Your Address</string>
    <string name="house_office_no">Area</string>
    <string name="landmark">LandMark</string>
    <string name="nearby">Street Name</string>
    <string name="asa">Continue</string>
    <string name="are_you_sure">Are You Sure?</string>
    <string name="enter_the_otp_here">Enter the otp here</string>
    <string name="verify">Verify</string>
    <string name="enter_4_digit_otp_that_we_sent_on">Enter the 6 digit OTP sent to</string>
    <string name="verify_your_mobile_number">Enter your Mobile Number</string>
    <string name="please_enter_your_10_digit_mobile_number_for_verification">Please Enter your 10 Digit Mobile Number for Verification</string>
    <string name="generate_otp">Send OTP</string>
    <string name="_8549301021">8549301021</string>
    <string name="partnerKey">4LISe19e198944831404092f20de2c5a3eeb5</string>
    <string name="my_profile">My Profile</string>
    <string name="garage_name">Garage Name</string>
    <string name="address">Address</string>
    <string name="pincode">PinCode</string>

    <string name="no_data_available">no_data_available</string>
    <string name="login_as">Login as</string>
    <string name="proceed_to_login">proceed to login</string>
    <string name="_8530487927">8530487927</string>
    <string name="___Add">Address:</string>
    <string name="hours">Hours:</string>
    <string name="_9_a_m_6_p_m_everyday">9 A.M - 6 P.M (Everyday)</string>
    <string name="sapror_kapurthala_nh_1_g_t_road_phagwara_phagwara_punjab">Sapror, Kapurthala, NH-1, G T Road, Phagwara, Phagwara, Punjab</string>
    <string name="bhogal_motor_garage">Bhogal Motor Garage</string>
    <string name="phone">Phone:</string>
    <string name="_09872860533">09872860533</string>
    <string name="_91_9872860533">+91 9872860533</string>
    <string name="_144411">144411</string>
    <string name="pick_amp_drop"><![CDATA[Pick & Drop]]></string>

</resources>