<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <ImageView

            android:layout_width="fill_parent"
            android:layout_height="@dimen/_150sdp"
            android:background="@drawable/background"
            android:scaleType="fitXY"
            android:src="@drawable/ic_group_652" />


        <ImageView
            android:id="@+id/settings"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginRight="@dimen/_6sdp"
            android:src="@drawable/ic_adjustment__2_" />

        <RelativeLayout
            android:id="@+id/profileBar"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="@dimen/_125sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="horizontal">

            <!--<de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/profile_image"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="@dimen/_70sdp"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_20sdp"
                android:src="@drawable/l"
                app:civ_border_width="2dp"
                app:civ_border_color="@color/white"/>-->



                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:textAllCaps="true"
                    android:textSize="@dimen/_15sdp"
                    android:textColor="@color/white"
                    android:text="@string/profileName"/>

            <LinearLayout
                android:layout_width="@dimen/_150sdp"
                android:layout_height="wrap_content"
                android:layout_below="@id/name"
                android:layout_centerInParent="true">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_7sdp"
                    android:src="@drawable/ic_location_pin" />


                <TextView
                    style="@style/location_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/_2sdp"
                    android:padding="@dimen/_3sdp"
                    android:text="@string/location" />
            </LinearLayout>
        </RelativeLayout>



        <LinearLayout
            android:id="@+id/serachbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/profileBar"
            android:orientation="vertical">

            <EditText
                android:layout_width="@dimen/_260sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_gravity="center"
                android:background="@drawable/ic_searchbar"
                android:drawableStart="@drawable/ic_search"
                android:drawableEnd="@drawable/ic_microphone"
                android:drawablePadding="@dimen/_10sdp"
                android:fontFamily="@font/segoe"
                android:hint="@string/search"
                android:paddingLeft="@dimen/_20sdp"
                android:paddingRight="@dimen/_20sdp"
                android:paddingBottom="@dimen/_4sdp"
                android:textColor="@color/grayy"
                android:textSize="@dimen/_11sdp"
                android:lines="1" />

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/serachbar"
            android:layout_marginTop="@dimen/_25sdp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal"
                android:gravity="center">

                <LinearLayout

                    android:layout_width="@dimen/_270sdp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/card_view"
                        style="@style/ServiceButton"
                        android:layout_margin="@dimen/_5sdp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:paddingTop="@dimen/_18sdp"
                            android:text="@string/service"
                            android:textColor="#525159"
                            android:textSize="@dimen/_11sdp"
                            card_view:drawableTopCompat="@drawable/ic_customer_support" />

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/card_view2"
                        style="@style/ServiceButton"
                        android:layout_margin="@dimen/_5sdp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:paddingTop="@dimen/_18sdp"
                            android:text="@string/tyers_wheels"
                            android:textColor="#525159"
                            android:textSize="@dimen/_11sdp"
                            card_view:drawableTopCompat="@drawable/ic_tyre" />

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/card_view3"
                        style="@style/ServiceButton"
                        android:layout_margin="@dimen/_5sdp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:paddingTop="@dimen/_18sdp"
                            android:text="@string/ac_service"
                            android:textColor="#525159"
                            android:textSize="@dimen/_11sdp"
                            card_view:drawableTopCompat="@drawable/ic_low_temperatures" />

                    </androidx.cardview.widget.CardView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="@dimen/_270sdp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/card_view4"
                        style="@style/ServiceButton"
                        android:layout_margin="@dimen/_5sdp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:paddingTop="@dimen/_18sdp"
                            android:text="@string/cleaning"
                            android:textColor="#525159"
                            android:textSize="@dimen/_11sdp"
                            card_view:drawableTopCompat="@drawable/ic_vaccum_cleaner" />

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/card_view5"
                        style="@style/ServiceButton"
                        android:layout_margin="@dimen/_5sdp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:paddingTop="@dimen/_18sdp"
                            android:text="@string/dent_repair"
                            android:textColor="#525159"
                            android:textSize="@dimen/_11sdp"
                            card_view:drawableTopCompat="@drawable/ic_group_656" />

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/card_view6"
                        style="@style/ServiceButton"
                        android:layout_margin="@dimen/_5sdp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:paddingTop="@dimen/_18sdp"
                            android:text="@string/batteries"
                            android:textColor="#525159"
                            android:textSize="@dimen/_11sdp"
                            card_view:drawableTopCompat="@drawable/ic_alert" />

                    </androidx.cardview.widget.CardView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="@dimen/_270sdp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/card_view7"
                        style="@style/ServiceButton"
                        android:layout_margin="@dimen/_5sdp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:paddingTop="@dimen/_18sdp"
                            android:text="@string/insurance"
                            android:textColor="#525159"
                            android:textSize="@dimen/_11sdp"
                            card_view:drawableTopCompat="@drawable/ic_group_654" />

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/card_view8"
                        style="@style/ServiceButton"
                        android:layout_margin="@dimen/_5sdp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:paddingTop="25dp"
                            android:text="Lights"
                            android:textColor="#525159"
                            android:textSize="@dimen/_11sdp"
                            card_view:drawableTopCompat="@drawable/ic_headlight" />

                    </androidx.cardview.widget.CardView>
                    <androidx.cardview.widget.CardView
                        android:id="@+id/card_view9"
                        style="@style/ServiceButton"
                        android:layout_margin="@dimen/_5sdp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:paddingTop="@dimen/_10sdp"
                            android:text="@string/custom"
                            android:textColor="#525159"
                            android:textSize="@dimen/_11sdp"
                            card_view:drawableTopCompat="@drawable/ic_tow_truck" />

                    </androidx.cardview.widget.CardView>

                </LinearLayout>

                <androidx.viewpager.widget.ViewPager
                    android:id="@+id/viewPager"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_100sdp"
                    android:layout_marginLeft="@dimen/_1sdp"
                    android:layout_marginRight="@dimen/_1sdp"
                    android:layout_marginTop="@dimen/_25sdp"/>

                <LinearLayout
                    android:id="@+id/SliderDots"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_3sdp"
                    android:layout_marginRight="@dimen/_3sdp"
                    android:gravity="center_vertical|center_horizontal"
                    android:orientation="horizontal" />
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
</layout>