<?xml version="1.0" encoding="utf-8"?>
<layout>

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Register_1">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:orientation="vertical">


                <ImageView
                    android:layout_width="@dimen/_140sdp"
                    android:layout_height="@dimen/_140sdp"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="@dimen/_5sdp"
                    android:src="@drawable/logo" />

                <EditText
                    android:id="@+id/name"
                    android:layout_width="@dimen/_260sdp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:background="@drawable/ic_rectangle_textbox"
                    android:drawableStart="@drawable/ic_name"
                    android:drawablePadding="@dimen/_11sdp"
                    android:hint="@string/your_name"
                    android:inputType="textPersonName"
                    android:paddingStart="@dimen/_17sdp"
                    android:paddingBottom="@dimen/_4sdp" />


                <EditText
                    android:id="@+id/emailText"
                    android:layout_width="@dimen/_260sdp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/ic_rectangle_textbox"
                    android:drawableLeft="@drawable/ic_email"
                    android:drawablePadding="@dimen/_8sdp"
                    android:hint="@string/e_mail"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="@dimen/_15sdp"
                    android:paddingBottom="@dimen/_4sdp" />

                <Button
                    android:id="@+id/submitButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/_30sdp"
                    android:background="@drawable/ic_group_704"
                    android:fontFamily="@font/segoe"
                    android:paddingTop="@dimen/_25sdp"
                    android:text="@string/RehisterB"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_15sdp" />

            </LinearLayout>
        </ScrollView>
    </FrameLayout>
</layout>