<?xml version="1.0" encoding="utf-8"?>
<layout>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgetPassword">

    <ImageView
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_margin="@dimen/_15sdp"
        android:src="@drawable/ic_left_arrow_1" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/backButton"
        android:layout_centerInParent="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <ImageView
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_150sdp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/_4sdp"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/segoe1"
            android:text="@string/we_just_need_your_registered_email_address_to"
            android:textColor="@color/black"
            android:alpha="0.5"
            android:textSize="@dimen/_14sdp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/_20sdp"
            android:fontFamily="@font/segoe1"
            android:text="@string/send_you_password_reset_instructions"
            android:textColor="@color/black"
            android:alpha="0.5"
            android:textSize="@dimen/_14sdp" />


        <EditText
            android:id="@+id/emailText"
            android:layout_width="@dimen/_260sdp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/ic_rectangle_textbox"
            android:drawableLeft="@drawable/ic_email"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"
            android:paddingLeft="@dimen/_15sdp"
            android:paddingBottom="@dimen/_4sdp"
            android:drawablePadding="@dimen/_8sdp"/>


        <Button
            android:id="@+id/ResetButton"
            style="@style/button"
            android:layout_width="@dimen/_160sdp"
            android:layout_height="@dimen/_60sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:text="Reset Password"
            android:paddingBottom="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_120sdp"
            android:textSize="@dimen/_15sdp"/>


    </LinearLayout>
    </ScrollView>
</RelativeLayout>
</layout>